Added in some debug log statements.